# nyc-yellow-taxi-analysis

./: .gitattributes  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: config.yaml
data/: cleaned_data.parquet
draft_notebooks/: nyc-draft1.ipynb  nyc-draft2.ipynb  nyc-draft3.ipynb
src/: data_ingestion.py  data_processing.py  exploratory_data_analysis.py  main.py
